# eton

./: Cargo.toml
migrations/: 20221026142213_notes.sql
src/: config.rs  database.rs  errors.rs  main.rs  note.rs  user.rs
